--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "react": "^16.13.1",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.13.1",
+    "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
